# MEGALON-artifact

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  access_pattern.h  common.h  kv_store.cc  page_cache.cc  pattern_sampler.cpp  trace.cc  ycsb_benchmark.cc  zipf_implementation.h
benchmarks/dyn_seqlock_test/: Makefile  seqcount.cc  seqcount.h  test.cc
benchmarks/results/hdd/hotspot-local/: results.json
benchmarks/results/hdd/random-local/: results.json
benchmarks/results/hdd/sequential-local/: results.json
benchmarks/results/limits/hotcache-linux-0.5GB/: results.json
benchmarks/results/limits/hotcache-mdfifo-0.5GB/: results.json
benchmarks/results/limits/hotcache-mdfifolargegcd-0.5GB/: results.json
benchmarks/results/limits/hotcache-mdnopagelocks-0.5GB/: results.json
benchmarks/results/limits/hotcache-minimaldaemon-0.5GB/: results.json
benchmarks/script/: analysis.py  avg_lat.py  avg_lat.sh  avg_lat_plot.py  avg_lat_singlethread.py  iterate.sh  iterate_key_size.sh  iterate_lock_size.sh  parse_log.py  parse_scr_budget.py  parse_scr_budget_log.py  parse_stats.py  parse_stats_eval2.py  parse_stats_key_size.py  parse_tigon_log.py  run_all_thread.sh  run_btree.sh  run_kv_store.sh  run_load_write.sh  run_tigon.sh  tmp.sh  visualize_distributions.py
cmake-variant/: CMakeLists_alllog.txt  CMakeLists_hcmeta.txt  CMakeLists_hcmeta_page_cache.txt  CMakeLists_page_cache.txt  CMakeLists_partitioned.txt
cmake-variant/toolchains/: clang17-gcc.cmake
config/: a.yaml  b.yaml  eval4.yaml  file.yaml  partition.yaml  ycsb.yaml  ycsb_d.yaml
include/: rackobj.h
lib/: MurmurHash3.cc  MurmurHash3.h  file.cc  file.h  globals.cc  globals.h  kv.cc  kv.h  memcpy.cc  memcpy.h  original_syscalls.cc  original_syscalls.h  shm_obj_handle.cc  shm_obj_handle.h
lib/glibc/: io_ops.cc  open.cc
protos/: CMakeLists.txt  rackfs.capnp  rackfs.proto
scripts/: build.sh  check_optimizations.sh  disable_optimizations.sh  format.sh  profile.sh  restore_optimizations.sh  set_uncore_frequency.sh  setup.sh  setup_logical_node.sh  turbo-boost.sh
scripts/eval/: eval1-datamove.sh  eval1.sh  eval10.sh  eval11.sh  eval12.sh  eval2-datamove.sh  eval2.sh  eval3.sh  eval4.sh  eval5.sh  eval6.sh  eval7.sh  eval8.sh  eval9.sh  motivation-datamove.sh  motivation.sh  run.sh  sample.sh
scripts/eval/parse/: parse_eval6.py  parse_stats_eval1.py  parser.py
src/arch/: arch-generic.h  arch-x86_64.h  arch.h
src/common/: config.cc  config.h  constants.h  debug.h  expected.h  helper.cc  helper.h  not_implemented.h  partitions.h  path.cc  path.h  spinlock.h  thread_local.h  types.h
src/core/: bitmap.cc  bitmap.h  blockid.h  blockid_file.h  blockid_variable.h  c3.cc  c3.h  cache_node.h  cache_slot.h  cc_primitive.cc  cc_primitive.h  local_cache_node.h  local_pages.cc  local_pages.h  lru_policy.cc  lru_policy.h  object_slot.cc  object_slot.h  page_data.h  scr_bitmap.cc  scr_bitmap.h  seqcount.cc  seqcount.h  write_meta.cc  write_meta.h
src/index/: gcd.cc  gcd.h  gcd_nr.cc  gcd_nr.h  lcd.cc  lcd.h  nr_hashmap.h
src/ipc/: constants.h  prelude.h  tigon_client.hpp  tigon_server.hpp
src/manager/: evict_manager.cc  evict_manager.h  flush_manager.cc  flush_manager.h  pmeta_manager.cc  pmeta_manager.h  replicate_manager.cc  replicate_manager.h  wmeta_manager.cc  wmeta_manager.h
src/shared_memory/: allocator.h  allocator.hpp  local_work_allocator.h  region.h  region.hpp
